--- a/app/src/main/res/layout/activity_categorylist.xml
+++ b/app/src/main/res/layout/activity_categorylist.xml
@@ -7,7 +7,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/photo_support_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_referensi"
