--- a/app/src/main/res/layout/item_row_comment.xml
+++ b/app/src/main/res/layout/item_row_comment.xml
@@ -1,42 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginTop="16dp">
+    android:layout_marginLeft="@dimen/space_4"
+    android:layout_marginRight="@dimen/space_4"
+    android:layout_marginTop="1dip"
+    android:background="@color/background_avatar"
+    android:orientation="vertical"
+    android:padding="@dimen/space_16">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/space_16">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/item_comment_tv_by"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-thin"
-            android:text="John"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:adjustViewBounds="true"
+            android:background="@color/background_avatar"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_default_user"/>
 
-        <TextView
-            android:id="@+id/item_comment_tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="12 September 2015"
-            android:textSize="11sp" />
-
-
-        <TextView
-            android:id="@+id/item_comment_tv_content"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:fontFamily="sans-serif-light"
-            android:text="@string/comment"
-            android:textSize="12sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_comment_tv_by"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="John"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/item_comment_tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="12 September 2015"
+                android:textColor="#B0BEC5"
+                android:textSize="12sp"/>
+        </LinearLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+
+    <TextView
+        android:id="@+id/item_comment_tv_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_8"
+        android:text="@string/comment"
+        android:textColor="#212121"/>
+</LinearLayout>
