--- a/app/src/main/res/layout/item_row_like.xml
+++ b/app/src/main/res/layout/item_row_like.xml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/space_16">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="@dimen/space_4"
+              android:layout_marginRight="@dimen/space_4"
+              android:layout_marginTop="0.1dip"
+              android:background="@color/background_avatar"
+              android:gravity="center_vertical"
+              android:orientation="horizontal"
+              android:padding="@dimen/space_16">
 
-    <TextView
-        android:id="@+id/item_row_like_tv_like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="John"
-        android:textSize="16sp" />
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:adjustViewBounds="true"
+        android:background="@color/background_avatar"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_default_user"/>
 
-    <TextView
-        android:id="@+id/item_row_like_tv_date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="like pada tanggal 12 September 2015" />
+        android:layout_marginLeft="@dimen/space_8"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/item_row_like_tv_like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="John"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/item_row_like_tv_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="12 September 2015"
+            android:textColor="#B0BEC5"
+            android:textSize="12sp"/>
+    </LinearLayout>
 </LinearLayout>
