--- a/app/src/main/res/layout/item_row_photo_post.xml
+++ b/app/src/main/res/layout/item_row_photo_post.xml
@@ -54,9 +54,17 @@
         </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/no_photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:src="@drawable/no_photo"/>
 
         <ImageView
             android:id="@+id/postfeed_img_photoImage"
@@ -68,17 +76,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/national_geographic"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/textView3"
-            android:layout_centerVertical="true"
-            android:layout_alignLeft="@+id/postfeed_img_photoImage"
-            android:layout_alignStart="@+id/postfeed_img_photoImage" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
